--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         </title>
     </head>
     <body>
-        <h1>This is my GitHub Pages website!</h1>
+        <h1>Nah bruh</h1>
+        my bad buh
     </body>
 </html>
