--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <title>
-            My site!
+            A Mind For Numbers
         </title>
     </head>
     <body>
-        <h1>Nah bruh</h1>
-        my bad buh
+        <h1 style="text-align:center">
+            A Mind For Numbers
+        </h1>
+        <div>
+            <p>Welcome! This website is deisgned to help people around the world develop an understanding for a variety of mathematical
+            subjects. It has been designed with the primary goal of you, the reader, to be able to teach yourself and master these 
+            subjects. At the end of each lesson, there is a set of practice problems in a PDF (a PDF with the solutions will also be
+            available). We hope you enjoy!</p>
+        </div>
+        <div>
+            <h2>Here are the differents subjects that are available:</h2>
+            <ul>
+                <li><a href="calculus1.html">Calculus I (work in progress)</a></li>
+                <li>Calculus II (work in progress)</li>
+                <li>Calculus II (work in progress)</li>
+                <li>Differential Equations (work in progress)</li>
+                <li>Linear Algebra (work in progress)</li>
+            </ul>
+        </div>
     </body>
 </html>
