Added a .css file and updated all of the other files to link to it

--- a/calculus1.html
+++ b/calculus1.html
@@ -4,12 +4,16 @@
         <title>
             A Mind For Numbers
         </title>
+        <link rel="stylesheet" href="Main_Head.css">
     </head>
     <body>
-        <h1 style="text-align:center">
-            A Mind For Numbers
-        </h1>
         <div>
+            <h1 class="Heading">
+                A Mind For Numbers
+            </h1>
+            <hr class="Heading_Border">
+        </div>
+        <div class="Body">
             <h2>Calculus I</h2>
             <p>
                 Calculus I is at the core of every advanved mathematical course. A strong understanding of it will provide a better
@@ -21,7 +25,7 @@
             <p>
                 <h2>Lesson Plan:</h2>
                 <ol>
-                    <li>Rates of Change</li>
+                    <li><a href="ratesofchange.html">Rates of Change</a></li>
                         <ul>
                             <li>Secant Lines</li>
                             <li>Tangent Lines</li>
