--- a/ratesofchange.html
+++ b/ratesofchange.html
@@ -4,15 +4,21 @@
         <title>
             A Mind For Numbers
         </title>
+        <link rel="stylesheet" href="Main_Head.css">
     </head>
     <body>
-        <h1 style="text-align:center">A Mind For Numbers</h1>
-        <h2>Calculus 1</h2>
-        <h3>Lesson 1: Rates of Change</h3>
         <div>
-            <p>
-                
-            </p>
+            <h1 class="Heading">A Mind For Numbers</h1>
+            <hr class="Heading_Border">
+        </div>
+        <div class="Body">
+            <h2>Calculus 1</h2>
+            <h3>Lesson 1: Rates of Change</h3>
+            <div>
+                <p>
+
+                </p>
+            </div>
         </div>
     </body>
 </html>
