Added more pages
Changes the layout and font, added a nav bar and an about page.

--- a/about.html
+++ b/about.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <title>
-            A Mind For Numbers
+            A Mind For Numbers - About
         </title>
         <link rel="stylesheet" href="Main_Head.css">
-        <link rel="stylesheet" href="ratesofchange_style.css">
     </head>
     <body class="Whole">
         <div class="Top_Nav">
@@ -28,17 +27,7 @@
         </div>
         <hr class="Title_Border">
         <div class="Body">
-            <h2 class="heading">
-                <button onclick="window.location.href='calculus1.html'" class="heading_button">
-                    Calculus I
-                </button>
-            </h2>
-            <h3>Lesson 1: Rates of Change</h3>
-            <div>
-                <p>
 
-                </p>
-            </div>
             <br/>
             <p>
             Last edited <script>document.write(document.lastModified);</script>
