--- a/calculus1.html
+++ b/calculus1.html
@@ -5,54 +5,72 @@
             A Mind For Numbers
         </title>
         <link rel="stylesheet" href="Main_Head.css">
+        <link rel="stylesheet" href="calculus1_style.css">
     </head>
-    <body>
-        <div>
-            <h1 class="Heading">
-                A Mind For Numbers
-            </h1>
-            <hr class="Heading_Border">
+    <body class="Whole">
+        <div class="Top_Nav">
+            <button onclick="window.location.href='about.html';" class="Top_Nav_Button">
+                About
+            </button>
+            <button onclick="window.location.href='#';" class="Top_Nav_Button">
+                Courses
+            </button>
+            <button onclick="window.location.href='index.html';" class="Top_Nav_Button">
+                Home
+            </button>
         </div>
+        <div>
+            <h1 class="Title">
+                <button onclick="window.location.href='index.html'" class="Title_Button">
+                    A Mind For Numbers
+                </button>
+            </h1>
+        </div>
+        <hr class="Title_Border">
         <div class="Body">
-            <h2>Calculus I</h2>
-            <p>
+            <h2 class="heading">
+                <button onclick="window.location.href='calculus1.html'" class="heading_button">
+                    Calculus I
+                </button>
+            </h2>
+            <div>
                 Calculus I is at the core of every advanved mathematical course. A strong understanding of it will provide a better
                 understanding of mathematics in general. It has often been stated that Calculus is the greatest gift to mankind, we
                 could not agree more. Calculus allows us to solve problems that could not have been understood thousands of years ago. 
                 Below, you can see the different lessons that we will go over in order to get a better understanding of Calculus,
                 the essence of mathematics.
-            </p>
-            <p>
+            </div>
+            <div>
                 <h2>Lesson Plan:</h2>
                 <ol>
-                    <li><a href="ratesofchange.html">Rates of Change</a></li>
+                    <li><a class="lesson_links" href="ratesofchange.html">Rates of Change</a></li>
                         <ul>
                             <li>Secant Lines</li>
                             <li>Tangent Lines</li>
                             <li>Difference Quotient</li>
                         </ul>
-                    <li>Limits</li>
+                    <li><a class="lesson_links" href="#">Limits</a></li>
                         <ul>
                             <li>Numerically</li>
                             <li>Analytically</li>
                             <li>Infinity</li>
                         </ul>
-                    <li>Derivatives</li>
+                    <li><a class="lesson_links" href="#">Derivatives</a></li>
                         <ul>
                             <li>Chain Rule</li>
                             <li>Product Rule</li>
                             <li>Quotient Rule</li>
                             <li>Inverse Trig Functions</li>
                         </ul>
-                    <li>Related Rates</li>
+                    <li><a class="lesson_links" href="#">Related Rates</a></li>
                         <ul>
                             <li>Implicit Differentiation</li>
                         </ul>
-                    <li>Summations</li>
+                    <li><a class="lesson_links" href="#">Summations</a></li>
                         <ul>
                             <li>Area Under Functions</li>
                         </ul>
-                    <li>Integration</li>
+                    <li><a class="lesson_links" href="#">Integration</a></li>
                         <ul>
                             <li>Definite Integrals</li>
                             <li>U-Substitution</li>
@@ -60,8 +78,12 @@
                             <li>First Deriviate Test</li>
                             <li>Second Derivative Test</li>
                         </ul>
-                    <li>Optimization</li>
+                    <li><a class="lesson_links" href="#">Optimization</a></li>
                 </ol>
+            </div>
+            <br/>
+            <p>
+            Last edited <script>document.write(document.lastModified);</script>
             </p>
         </div>
     </body>
