--- a/calculus1.html
+++ b/calculus1.html
@@ -1,58 +1,90 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
-            A Mind For Numbers
+            Calculus I | MWi - MathWise Institute
         </title>
         <link rel="stylesheet" href="Main_Head.css">
+        <link rel="stylesheet" href="calculus1_style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+        <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+        </script>
     </head>
-    <body>
+    <body class="Whole">
         <div>
-            <h1 class="Heading">
-                A Mind For Numbers
-            </h1>
-            <hr class="Heading_Border">
+            <button onclick="window.location.href='index.html'" class="Title_image"></button>
+            <button onclick="window.location.href='about.html';" class="Top_Nav_Button">
+                About
+            </button>
+            <button onclick="window.location.href='#';" class="Top_Nav_Button">
+                Courses
+            </button>
+            <button onclick="window.location.href='index.html';" class="Top_Nav_Button">
+                Home
+            </button>
         </div>
+        <hr class="Title_Border">
         <div class="Body">
-            <h2>Calculus I</h2>
-            <p>
-                Calculus I is at the core of every advanved mathematical course. A strong understanding of it will provide a better
-                understanding of mathematics in general. It has often been stated that Calculus is the greatest gift to mankind, we
-                could not agree more. Calculus allows us to solve problems that could not have been understood thousands of years ago. 
-                Below, you can see the different lessons that we will go over in order to get a better understanding of Calculus,
-                the essence of mathematics.
-            </p>
-            <p>
+            <h2 class="heading">
+                <button onclick="window.location.href='calculus1.html'" class="heading_button">
+                    Calculus I
+                </button>
+            </h2>
+            <div>
+                <p>
+                    Throughout university, there a several different Calculus courses that one can take.
+                    For example, there are different versions of calculus courses taught to students in the
+                    life sciences, business, engineering, etc. Our Calculus courses are equivalent to the
+                    Calculus with Analytic Geometry courses offered at university. Nonetheless, we do our best
+                    to include a variety of problems that can be applied to different versions of the course.
+                </p>
+                <p>
+                    Our Calculus I course will walk you through all of the material typically covered in a
+                    semester-long university course. Thus, it is reasonable to expect to finish the course in
+                    about 3 to 4 months. Each lesson could theoretically be covered in one (long) sitting.
+                    Additionally, at the end of every lesson there is problem set on the lesson's material that 
+                    should be completed before continuing. Each problem set will have around 6 to 12 problems in
+                    total, split into three different sections: easy, moderate, and challenging. An answer key to
+                    the problem sets will also be provided, with a step-by-step solution to all of the problems.
+                </p>
+                <p>
+                    Below, you will find the lesson plan for the course. We hope it is manageable and efficient.
+                </p>
+            </div>
+            <div>
                 <h2>Lesson Plan:</h2>
                 <ol>
-                    <li><a href="ratesofchange.html">Rates of Change</a></li>
+                    <li><a class="lesson_links" href="Functions_TheBasics.html">Functions and Limits</a></li>
                         <ul>
-                            <li>Secant Lines</li>
-                            <li>Tangent Lines</li>
-                            <li>Difference Quotient</li>
+                            <li><a class="lesson_links" href="Functions_TheBasics.html">Functions: The Basics</a></li>
+                            <li><a class="lesson_links" href="LimitOfAFunction.html">Limit of a Function</a></li>
+                            <li><a class="lesson_links" href="#">Inifinity as a Limit (Undefined Limits)</a></li>
                         </ul>
-                    <li>Limits</li>
+                    <li><a class="lesson_links" href="#">Limits</a></li>
                         <ul>
                             <li>Numerically</li>
                             <li>Analytically</li>
                             <li>Infinity</li>
                         </ul>
-                    <li>Derivatives</li>
+                    <li><a class="lesson_links" href="#">Derivatives</a></li>
                         <ul>
                             <li>Chain Rule</li>
                             <li>Product Rule</li>
                             <li>Quotient Rule</li>
                             <li>Inverse Trig Functions</li>
                         </ul>
-                    <li>Related Rates</li>
+                    <li><a class="lesson_links" href="#">Related Rates</a></li>
                         <ul>
                             <li>Implicit Differentiation</li>
                         </ul>
-                    <li>Summations</li>
+                    <li><a class="lesson_links" href="#">Summations</a></li>
                         <ul>
                             <li>Area Under Functions</li>
                         </ul>
-                    <li>Integration</li>
+                    <li><a class="lesson_links" href="#">Integration</a></li>
                         <ul>
                             <li>Definite Integrals</li>
                             <li>U-Substitution</li>
@@ -60,8 +92,12 @@
                             <li>First Deriviate Test</li>
                             <li>Second Derivative Test</li>
                         </ul>
-                    <li>Optimization</li>
+                    <li><a class="lesson_links" href="#">Optimization</a></li>
                 </ol>
+            </div>
+            <br/>
+            <p>
+            Last edited <script>document.write(document.lastModified);</script>
             </p>
         </div>
     </body>
