--- a/index.html
+++ b/index.html
@@ -1,35 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
-            A Mind For Numbers
+            MWi - MathWise Institute
         </title>
         <link rel="stylesheet" href="Main_Head.css">
+        <link rel="stylesheet" href="index_style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+        <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+        </script>
     </head>
-    <body>
+    <body class="Whole">
         <div>
-            <h1 class="Heading">
-                A Mind For Numbers
-            </h1>
-            <hr class="Heading_Border">
+            <button onclick="window.location.href='index.html'" class="Title_image"></button>
+            <button onclick="window.location.href='about.html';" class="Top_Nav_Button">
+                About
+            </button>
+            <button onclick="window.location.href='#';" class="Top_Nav_Button">
+                Courses
+            </button>
+            <button onclick="window.location.href='index.html';" class="Top_Nav_Button">
+                Home
+            </button>
         </div>
+        <hr class="Title_Border">
         <div class="Body">
-            <div>
-                <p>Welcome! This website is deisgned to help people around the world develop an understanding for a variety of mathematical
-                subjects. It has been designed with the primary goal of you, the reader, to be able to teach yourself and master these 
-                subjects. At the end of each lesson, there is a set of practice problems in a PDF (a PDF with the solutions will also be
-                available). We hope you enjoy!</p>
+            <div class="Intro">
+                <p>
+                    MathWise Insititute is designed to help people around the world develop a strong understanding for a variety of mathematical
+                    subjects. Each course goes through the material that would typically be covered in a university environment, and more! The primary
+                    goal is for you, the reader, to be able to learn at your own pace. A lesson plan can be found when clicking on any of the available
+                    courses. At the end of each lesson, a problem set will be assigned in order to test what's
+                    been leaned. The problem sets will be split up into three sections: easy, moderate, and challenging. The goal is to build confidence
+                    before facing a challenging problem. A file with the problem set solutions will also be available at the end of each lesson, should it
+                    be necessary. Explore the courses and have fun growing your mathematical mind, we hope you enjoy!
+                </p>
             </div>
-            <div>
-                <h2>Here are the differents subjects that are available:</h2>
+            <div class="Subject_Field">
+                <h3>
+                    Available courses:
+                    <ul>
+                        <li><a class="Subject_Links" href="calculus1.html">Calculus I (work in progress)</a></li>
+                        </br>
+                        <li>Calculus II (not yet developed)</li>
+                        </br>
+                        <li>Calculus II (not yet developed)</li>
+                        </br>
+                        <li>Differential Equations (not yet developed)</li>
+                        </br>
+                        <li>Linear Algebra (not yet developed)</li>
+                        </br>
+                    </ul>
+                </h3>
+            </div>
+            <div class="Resources">
+                These are a few resources that we have used while going through these courses, they are definitely worth your awareness:
                 <ul>
-                    <li><a href="calculus1.html">Calculus I (work in progress)</a></li>
-                    <li>Calculus II (work in progress)</li>
-                    <li>Calculus II (work in progress)</li>
-                    <li>Differential Equations (work in progress)</li>
-                    <li>Linear Algebra (work in progress)</li>
+                    <li></li>
                 </ul>
             </div>
+            <br/>
+            <p class="Footer">
+            Last edited <script>document.write(document.lastModified);</script>
+            </p>
         </div>
     </body>
 </html>
