Worked on the 'LimitOfAFunction' page a bit more, also modified all of the sizing on the site so that it is more compatible with mobile devices. Added a figure, formula sheet, and a java script that shows the solution for examples on the site.

--- a/Functions_TheBasics.html
+++ b/Functions_TheBasics.html
@@ -57,7 +57,7 @@
                     at least one input value. A <b>bijection</b> is a function that is both an injection and a surjection.
                     <br><br>
                     <center>
-                        <img src="Types_of_functions.png" alt="Images of the different types of fuctions" width="1000px" height="auto">
+                        <img class="bigFigure" src="Types_of_functions.png" alt="Images of the different types of fuctions">
                     </center>
                     <br><br>
                     From the image above:
