--- a/calculus1.html
+++ b/calculus1.html
@@ -32,6 +32,9 @@
                 <button onclick="window.location.href='calculus1.html'" class="heading_button">
                     Calculus I
                 </button>
+                <button onclick="window.location.href='Functions_TheBasics.html'" class="next_button">
+                    Get Started
+                </button>
             </h2>
             <div>
                 <p>
