--- a/LimitOfAFunction.html
+++ b/LimitOfAFunction.html
@@ -73,22 +73,23 @@
                     function as \(x\) approaches \(\alpha\) will not be equal to the value of \(f(x)\).
                     Additionally, even if the function is define at \(x=\alpha\), a discontinuous function will
                     also lead to inconsistencies at a point of discontinuity.
-                    <br>
+                    <br><br>
                     Before we look at an example of a discontinuous function, let's go over a bit of new notation:
                     \[
                         \begin{gather*}
-                            \lim_{x\to\alpha^+} f(x)=\beta_1, & \lim_{x\to\alpha^-} f(x)=\beta_2,
+                            \lim_{x\to\alpha^+} f(x)=\beta_1 \text{ (right-hand limit)}, \\
+                            \lim_{x\to\alpha^-} f(x)=\beta_2 \text{ (left-hand limit)},
                         \end{gather*}
                     \]
                     where \(\beta_1\) may or may not be equal to \(\beta_2\). The difference between these expressions
                     and the notation from the beginning of the section is that the value \(x\) is approaching, \(\alpha\),
                     now has a \(+\) or \(-\) as an exponent. All this is telling us is which direction we are approaching
                     the value \(\alpha\) from. When the limit has a \(+\) that indicates that we are only looking for the
-                    value as we approach from the right hand side, and when the limit has a \(-\) it means we are only looking
-                    as we approach only from the left hand side. So, whereas before we would be looking from both sides of the
+                    value as we approach from the right hand side, i.e. \(x&gt;\alpha\), and when the limit has a \(-\) it means we are only looking
+                    as we approach only from the left hand side, i.e. \(x&lt;\alpha\). So, whereas before we would be looking from both sides of the
                     \(x\) value, we are now only considering one.
                     <br><br>
-                    <b><u>Example 1:</u></b> Let's evaluate the graph of the piecewise function \(m\), defined by
+                    <b><u>Example:</u></b> Let's evaluate the graph of the piecewise function \(m\), defined by
                     \[
                         \begin{gather*}
                             m(x) = \left\{
@@ -121,14 +122,26 @@
                     <div id="text1" class="slideout">
                         \(\text{a. }\) To evaluate \(m(3)\), we must look at the \(x\) value of \(3\) on the graph and look for the resulting output value,
                         in this case \(4\) (as seen from the green point on the graph). Thus, \(m(3)=4\).
-                        <br>
+                        <br><br>
                         \(\text{b. }\) Since the limit has a negative exponent on the \(3\), that means we are looking for the limit as \(x\) approaches
                         \(3\) from the left. Looking at the graph, this would be the red curve. Thus, the limit of \(m(x)\) as \(x\) approaches \(3\) from the
-                        left is equal to \(0\).
-                        <br>
+                        left is equal to \(0\). We can express this as the following:
+                        \[
+                            \begin{gather*}
+                                \lim_{x\to 3^-} m(x) = \lim_{x\to 3} \left[4\sin(x-3)\right] = 0.
+                            \end{gather*}
+                        \]
+                        Notice that since we were approaching \(3\) from the left, we were only looking at the first sub-function of \(m(x)\), \(4\sin(x-3)\).
+                        Thus, we were able to replace \(m(x)\) with \(4\sin(x-3)\) and we dropped the negative sign on the \(3\).
+                        <br><br>
                         \(\text{c. }\) This part now asks us to look for the limit as \(x\) approaches \(3\) from the right. This would be visually represented
                         from the blue curve on the graph above. We see that the limit of \(m(x)\) as \(x\) approaches \(3\) from the right is equal to \(-4\).
-                        <br>
+                        Following the same methodology from part \(b\), we can express this as the following:
+                        \[
+                            \begin{gather*}
+                                \lim_{x\to 3^+} m(x) = \lim_{x\to 3} \left[(x-3)^2-4\right] = -4.
+                            \end{gather*}
+                        \]
                         \(\text{d. }\) Since this function is discontinuous, \(\lim_{x\to 3} m(x)\neq m(3)\). In fact, because the limit approaches different values
                         from each side, \(0\) from the left and \(-4\) from the right, the limit as \(x\) approaches \(3\) from both sides is <b>undefined</b>. 
                         This is because a limit must approach the same value from the left and the right, as stated before. We will go deeper into undefined limits
@@ -144,17 +157,19 @@
                             & (c) \lim_{x\to\alpha} \frac{f(x)}{g(x)} = \frac{\lim_{x\to\alpha} f(x)}{\lim_{x\to\alpha} g(x)}.
                         \end{align*}
                     \]
-                    A more extensive list of useful limit properties and formulas(including the ones
-                    already mentioned) can be found <a href="Limit_Formulas.pdf">here</a>. These formulas can be very useful when solving more complicated limit problems.
+                    A more extensive list of useful limit properties and formulae (including the ones
+                    already mentioned) can be found <a href="Limit_Formulas.pdf">here</a>. These formulae can be very useful when solving more complicated limit problems.
                     <br><br>
-
+                    In conclusion, when taking a limit of a function you are looking for the value the function approaches as the independent variable, in many cases \(x\),
+                    approaches some value \(\alpha\), either from the left, right, or both sides simultaneously. In the following section we will go over discontinuities around
+                    how to deal with infinity as a limit.
                 </p>
             </div>
             <div>
                 <button onclick="window.location.href='Functions_TheBasics.html'" class="previous_button">
                     Previous: Functions: The Basics
                 </button>
-                <button onclick="window.location.href='#'" class="next_button">
+                <button onclick="window.location.href='UndefinedLimits.html'" class="next_button">
                     Next: Inifinity as a Limit (Undefined Limits)
                 </button>
             </div>
